--- a/package.json
+++ b/package.json
@@ -1,18 +1,36 @@
 {
-  "name": "Utopia Project",
+  "name": "utopia-test",
   "version": "0.1.0",
   "utopia": {
     "main-ui": "utopia/storyboard.js",
     "html": "public/index.html",
     "js": "src/index.js"
   },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
   "dependencies": {
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "utopia-api": "0.4.1",
-    "react-spring": "8.0.27",
-    "@heroicons/react": "1.0.1",
     "@emotion/react": "11.9.3",
-    "lucide-react": "0.407.0"
+    "@heroicons/react": "1.0.1",
+    "lucide-react": "0.407.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-scripts": "^5.0.1",
+    "react-spring": "8.0.27"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
